@@ -1,3 +1,7 @@
+- services:
+  o use --no-block with chkconfig and systemctl enable to prevent systemd reload
+    and potential crash (especially during first/live boot)
+
 Version 16.21 - 13 January 2014
 
 - partitioning:
